simplify about text

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,19 +4,17 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <div class="text">
-        Noah Syrkis's work explores the aesthetics of archives and mathematics,
+        Noah Syrkis' work explores the aesthetics of archives and mathematics,
         along with variations on geospatial and organic themes. Working across
         Copenhagen, Rio de Janeiro, and New York, Noah develops systems that
-        translate complex and often stochastic processes into visual and
-        physical form. His work occupies a space between structure and decay. As
-        an artificial intelligence researcher for the Swiss Armed Forces, and
-        through his work at <a href="https://virian.org" target="_blank"
-            ><i>the Virian Project</i></a
-        >, Noah studies complex domains by computational means. From command and
-        control systems to cultural geometry, his work investigates how patterns
-        evolve and dissolve in both synthetic and organic systems, employing,
-        among other techniques, mechanistic interpretability and geometric deep
-        learning.
+        translate complex and stochastic processes into visual and physical
+        forms, often occupying a space between structure and decay. As an
+        artificial intelligence researcher Noah studies complex domains by
+        computational means. From command and control systems to cultural
+        geometry, his research investigates how patterns evolve and dissolve in
+        both synthetic and organic systems, employing, among other techniques,
+        mechanistic interpretability, geometric deep learning, and quality
+        diversity algorithms.
     </div>
 </Layout>
 
