--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,4 +30,9 @@ const isRoot = Astro.url.pathname === "/";
         max-width: 90%;
         margin: auto;
     }
+    @media (max-width: 600px) {
+        header {
+            width: 300px;
+        }
+    }
 </style>
