--- a/src/components/Series.astro
+++ b/src/components/Series.astro
@@ -7,26 +7,15 @@ interface Props {
 }
 
 const { entry } = Astro.props;
-const { title, year, desc, cover, material, works } = entry.data;
+const { title, year, desc, material, works } = entry.data;
 ---
 
 <div class="series">
     <h1>
-        <Title {entry} />
+        {title}
     </h1>
-    <p class="year">{year}</p>
     <p class="description">{desc}</p>
-    <p class="material">{material}</p>
-
-    <div class="cover">
-        <img
-            src={`https://s3.syrkis.com/${entry.id}/${cover}`}
-            alt={`Cover image for ${title}`}
-        />
-    </div>
-
     <div class="works">
-        <h2>Works</h2>
         <div class="works-grid">
             {
                 works.map((work) => (
@@ -35,7 +24,9 @@ const { title, year, desc, cover, material, works } = entry.data;
                             src={`https://s3.syrkis.com/${entry.id}/${work.file}`}
                             alt={work.name}
                         />
-                        <h3>{work.name}</h3>
+                        <p>
+                            {work.name}, {material}, {year}
+                        </p>
                     </div>
                 ))
             }
@@ -44,23 +35,24 @@ const { title, year, desc, cover, material, works } = entry.data;
 </div>
 
 <style>
+    p {
+        text-align: center;
+        max-width: 600px;
+        margin: auto;
+    }
     .series {
-        max-width: 1200px;
+        width: 90%;
         margin: 0 auto;
-        padding: 2rem;
-    }
-    .year,
-    .material {
-        color: #666;
-    }
-    .works-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        gap: 2rem;
-        margin-top: 2rem;
+        padding: 10vh 0;
     }
     .work img {
         width: 100%;
         height: auto;
+    }
+    .work {
+        padding: 5vh 0;
+    }
+    .works {
+        padding: 5vh 0;
     }
 </style>
