--- a/src/components/Series.astro
+++ b/src/components/Series.astro
@@ -3,7 +3,7 @@ import type { CollectionEntry } from "astro:content";
 import Title from "../components/Title.astro";
 
 interface Props {
-    entry: CollectionEntry<"series">;
+    entry: CollectionEntry<"works">;
 }
 
 const { entry } = Astro.props;
