--- a/src/pages/talks.astro
+++ b/src/pages/talks.astro
@@ -45,9 +45,8 @@ const emailDomain = "syrkis.com";
 <style>
     .cover {
         position: relative;
-        /* width: 700px; */
         max-width: 90%;
-        height: 300px;
+        height: 256px;
         margin: 0 auto;
         overflow: hidden;
     }
@@ -64,7 +63,7 @@ const emailDomain = "syrkis.com";
         margin: auto;
     }
     #talks {
-        padding: 15vh 0;
+        padding: 10vh 0;
         text-align: center;
     }
     .section {
@@ -81,7 +80,7 @@ const emailDomain = "syrkis.com";
         text-align: center;
         font-size: 1.2em;
         line-height: 2.5;
-        padding-top: 6rem;
+        padding-bottom: 20vh;
     }
     .slide-info {
         display: flex;
