--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -57,7 +57,9 @@ const emailDomain = "syrkis.com";
     }
     .works {
         height: 80vh;
-        margin: 20vh 5vw;
+        /* padding-top: 15vh; */
+        margin: 10vh auto 20vh auto;
+        width: 90%;
         border-radius: 20px;
         display: flex;
         flex-direction: column;
