--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -7,7 +7,7 @@ body {
     height: 100%;
     font-size: 1.2em;
     line-height: 2.5;
-    font-family: "Libertinus Serif", serif;
+    font-family: "David Libre", serif;
     letter-spacing: 0.02em;
 }
 
