--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,12 @@ import "../assets/global.css";
             charset="utf-8"
         />
         <link
+            href="https://fonts.cdnfonts.com/css/david-libre"
+            rel="stylesheet"
+            type="text/css"
+            charset="utf-8"
+        />
+        <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@4/distr/fira_code.css"
         />
