--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -7,7 +7,7 @@ const works = (await getCollection("works")).filter(
 );
 
 const text =
-    "Balancing structure with decay, these works explore archival aesthetics through geospatial and organic variations. Limited edition prints are available upon request to";
+    "Exploring structure with decay, these works include archival aesthetics through geospatial and organic variations. Limited edition prints are available upon request to";
 const emailUser = "desk";
 const emailDomain = "syrkis.com";
 ---
@@ -69,6 +69,7 @@ const emailDomain = "syrkis.com";
             transform 0.5s ease-in-out,
             opacity 0.5s ease-in-out;
     }
+
     h2 {
         mix-blend-mode: difference;
         color: black;
