--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const isRoot = Astro.url.pathname === "/";
             <!-- Noah Syrkis -->
             <header transition:name="headers">
                 <a href="/works" class="nav-link">works</a>
-                <a href="/" class="divider">|</a>
+                <a href="/" class="divider">—</a>
                 <a href="/talks" class="nav-link">talks</a>
             </header>
         </div>
